fixed spacing on photo page and also created about me

--- a/site.css
+++ b/site.css
@@ -19,9 +19,6 @@ body {
   a {
     font-size: 2rem !important;
   }
-  .image-container img {
-    width: 90% !important;
-  }
 }
 
 @media only screen and (max-width: 1450px) {
@@ -182,10 +179,8 @@ a:hover::before{
 }
 
 .column img {
-  margin-top: 8px;
   vertical-align: middle;
   width: 100%;
-  padding: 5px;
   transition: 1.2s all ease-in-out;
 }
 
